# smart-document-qa

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  main.py  schemas.py
app/rag/: chain.py  document_processor.py  embeddings.py
tests/: conftest.py  test_api.py  test_rag.py
